Fixed bug where the html was not using full width on mobile screens.

--- a/app/assets/styles/modules/_page-content.css
+++ b/app/assets/styles/modules/_page-content.css
@@ -40,7 +40,9 @@
         }
     }
     img {
-        border-radius: 2%;
+        border-radius: 3%;
+        display: block;
+        margin: 0 auto;
     }
     &__heading {
         text-align: center;
